# circ-pandas

./: .gitignore  .pre-commit-config.yaml  README.md  circpandas.py  pyproject.toml  requirements.txt  setup.cfg  test_circpandas.py  tox.ini
.github/workflows/: check.yml
circ/: circpandas.py  test_circpandas.py
tests/: test_circpandas.py
