[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310
isolated_build = true
skip_missing_interpreters = true
minversion = 3.14

[gh-actions]
python =
    3.9: py39
    3.10: py310

[testenv]
deps = -rrequirements.txt
commands = pytest
"""

[tool.mypy]
python_version = 3.9
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
