[metadata]
name = circ-pandas
version = 0.1.0
url = https://github.com/konnyakmannan/circ-pandas
author = Taiki Kanda
author_email = taiki@konnyak.com
license = MIT
description = extending pandas data for circular data
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    circular data
    directional statistics
    extending pandas

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
test =
    mypy
    pytest
    tox
